# ai_hackathon_3

./: .gitignore  .gitmodules  bone.md  main.py  pyproject.toml  test_numpy.py
VideoPose3D/: main.py  pyproject.toml
VideoPose3D/data/: data_2d_custom_otani.npz  prepare_data_2d_custom.py
VideoPose3D/inference/: infer_video_d2.py
VideoPose3D/output_npz/: otani.mp4.npz
analyze_motion/: amateur_knee.csv  bad_form.mov  compute_knee_angles.py  extract_pose_min.py  get_ridid_rate.py  otani.mov  poses.csv  pro_knee.csv  viz_pose_min.py
app/: gui_app_sample.html
app/gui_app/: back.py  front.html
app_browser_test/: README.md  app.py  pyproject.toml
app_browser_test/static/: script.js  style.css
app_browser_test/templates/: index.html
data/motion/: HipHop.fbx  sample_motion.fbx
git_training/: bone.md  sine.py  tin.py
gui_app/: back.py
make_bone/: main.py
make_bone/fig/: nakayamakinnikun_art202202.avif
read_fbx/: README.md  actor_0.fbx  convert_fbx_to_gltf.py  estimate_gait_pitch.py  estimate_steps_stride.py  quick_check_root_motion.py  scan_translation_activity.py
video_creator/: apply_motion.py  apply_motion_v2.py  create_video.sh  main.py  pyproject.toml
video_creator/output/: sample0001-0250.mkv
