[project]
name = "videopose3d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "detectron2",
    "setuptools>=80.9.0",
    "torchvision>=0.23.0",
]

[tool.uv.sources]
detectron2 = { git = "https://github.com/facebookresearch/detectron2.git" }
